force-app/main/default/objects/Secure_Bag__c/Secure_Bag__c.object-meta.xml
<CustomObject>
    <label>Secure Bag</label>
    <nameField>
        <displayFormat>SB-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secure Bags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>