force-app/main/default/objects/Secure_Bag__c/fields/Cargo_Type__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Type__c</fullName>
    <formula>Shipment__r.Cargo_Type_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cargo Type</label>
    <type>Text</type>
</CustomField>