force-app/main/default/objects/Secure_Bag__c/fields/Current_Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Current_Destination_City__c</fullName>
    <label>Current Destination City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>