force-app/main/default/objects/Secure_Bag__c/fields/Current_Origin_City__c.field-meta.xml
<CustomField>
    <fullName>Current_Origin_City__c</fullName>
    <label>Current Origin City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>