force-app/main/default/objects/Secure_Bag__c/fields/Current_Scan_Airport__c.field-meta.xml
<CustomField>
    <fullName>Current_Scan_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current scan Airport</label>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Secure Bags (Airport)</relationshipLabel>
    <relationshipName>Secure_Bags1</relationshipName>
    <type>Lookup</type>
</CustomField>