force-app/main/default/objects/Secure_Bag__c/fields/Current_Scan_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Current_Scan_Date_and_Time__c</fullName>
    <label>Current Scan Date and Time</label>
    <type>DateTime</type>
</CustomField>