force-app/main/default/objects/Secure_Bag__c/fields/Current_Scan_Hub__c.field-meta.xml
<CustomField>
    <fullName>Current_Scan_Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Scan Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Secure Bags</relationshipLabel>
    <relationshipName>Secure_Bags</relationshipName>
    <type>Lookup</type>
</CustomField>