force-app/main/default/objects/Secure_Bag__c/fields/Current_Scanned_at__c.field-meta.xml
<CustomField>
    <fullName>Current_Scanned_at__c</fullName>
    <formula>TEXT(Current_Scan_Hub__r.Branch__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Scanned at</label>
    <type>Text</type>
</CustomField>