force-app/main/default/objects/Secure_Bag__c/fields/Destination_Hub__c.field-meta.xml
<CustomField>
    <fullName>Destination_Hub__c</fullName>
    <formula>Shipment__r.Destination_Hub__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Destination Hub</label>
    <type>Text</type>
</CustomField>