force-app/main/default/objects/Secure_Bag__c/fields/Finalized_Time__c.field-meta.xml
<CustomField>
    <fullName>Finalized_Time__c</fullName>
    <label>Finalized Time</label>
    <type>DateTime</type>
</CustomField>