force-app/main/default/objects/Secure_Bag__c/fields/Geo_Code__c.field-meta.xml
<CustomField>
    <fullName>Geo_Code__c</fullName>
    <formula>&apos;Latitude : &apos;+ TEXT(Tracking__r.Geocode__Latitude__s) +&apos;, Longitude : &apos;+TEXT(Tracking__r.Geocode__Longitude__s)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geo Code</label>
    <type>Text</type>
</CustomField>