force-app/main/default/objects/Secure_Bag__c/fields/Hub_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hub_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hub Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Secure_Bags</relationshipName>
    <type>Lookup</type>
</CustomField>