force-app/main/default/objects/Secure_Bag__c/fields/Incorrect_Linehaul_Seal__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Linehaul_Seal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incorrect Linehaul Seal?</label>
    <type>Checkbox</type>
</CustomField>