force-app/main/default/objects/Secure_Bag__c/fields/Internal_Transfer_From__c.field-meta.xml
<CustomField>
    <fullName>Internal_Transfer_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Transfer From</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Secure Bags (Internal Transfer From)</relationshipLabel>
    <relationshipName>Secure_Bags2</relationshipName>
    <type>Lookup</type>
</CustomField>