force-app/main/default/objects/Secure_Bag__c/fields/Internal_Transfer_To__c.field-meta.xml
<CustomField>
    <fullName>Internal_Transfer_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Transfer To</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Secure Bags (Internal Transfer To)</relationshipLabel>
    <relationshipName>Secure_Bags3</relationshipName>
    <type>Lookup</type>
</CustomField>