force-app/main/default/objects/Secure_Bag__c/fields/Is_Misrouted__c.field-meta.xml
<CustomField>
    <fullName>Is_Misrouted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Misrouted</label>
    <type>Checkbox</type>
</CustomField>