force-app/main/default/objects/Secure_Bag__c/fields/Last_scan_Airport__c.field-meta.xml
<CustomField>
    <fullName>Last_scan_Airport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last scan Airport</label>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Secure Bags (Last scan Airport)</relationshipLabel>
    <relationshipName>Secure_Bags2</relationshipName>
    <type>Lookup</type>
</CustomField>