force-app/main/default/objects/Secure_Bag__c/fields/Last_Scan_Data_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Scan_Data_and_Time__c</fullName>
    <label>Last Scan Data and Time</label>
    <type>DateTime</type>
</CustomField>