force-app/main/default/objects/Secure_Bag__c/fields/Last_Scan_Location__c.field-meta.xml
<CustomField>
    <fullName>Last_Scan_Location__c</fullName>
    <label>Last Scan Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created</fullName>
            </value>
            <value>
                <fullName>Out for Pickup</fullName>
            </value>
            <value>
                <fullName>Picked Up</fullName>
            </value>
            <value>
                <fullName>Origin Hub</fullName>
            </value>
            <value>
                <fullName>Origin Port</fullName>
            </value>
            <value>
                <fullName>Transit Hub</fullName>
            </value>
            <value>
                <fullName>Transit Port</fullName>
            </value>
            <value>
                <fullName>Destination Port</fullName>
            </value>
            <value>
                <fullName>Destination Hub</fullName>
            </value>
            <value>
                <fullName>Out for Delivery</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>