force-app/main/default/objects/Secure_Bag__c/fields/Last_Scanned_Hub__c.field-meta.xml
<CustomField>
    <fullName>Last_Scanned_Hub__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Scanned Hub</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Secure Bags (Last Scanned Hub)</relationshipLabel>
    <relationshipName>Secure_Bags1</relationshipName>
    <type>Lookup</type>
</CustomField>