force-app/main/default/objects/Secure_Bag__c/fields/Linehaul_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Linehaul_Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linehaul Tracking</label>
    <referenceTo>Linehaul_Tracking__c</referenceTo>
    <relationshipLabel>Secure Bags</relationshipLabel>
    <relationshipName>Secure_Bags</relationshipName>
    <type>Lookup</type>
</CustomField>