force-app/main/default/objects/Secure_Bag__c/fields/Lock_Status__c.field-meta.xml
<CustomField>
    <fullName>Lock_Status__c</fullName>
    <label>Lock Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lock</fullName>
            </value>
            <value>
                <fullName>Unlock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>