force-app/main/default/objects/Secure_Bag__c/fields/Next_Destination__c.field-meta.xml
<CustomField>
    <fullName>Next_Destination__c</fullName>
    <label>Next Destination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch</valueSetName>
    </valueSet>
</CustomField>