force-app/main/default/objects/Secure_Bag__c/fields/Next_Destination_HUB_Name__c.field-meta.xml
<CustomField>
    <fullName>Next_Destination_HUB_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Destination HUB Name</label>
    <referenceTo>Hub__c</referenceTo>
    <relationshipLabel>Secure Bags (Next Destination HUB Name)</relationshipLabel>
    <relationshipName>Secure_Bags4</relationshipName>
    <type>Lookup</type>
</CustomField>