force-app/main/default/objects/Secure_Bag__c/fields/Next_Hub__c.field-meta.xml
<CustomField>
    <fullName>Next_Hub__c</fullName>
    <formula>Current_Scan_Hub__r.Name</formula>
    <label>Next Hub</label>
    <type>Text</type>
</CustomField>