force-app/main/default/objects/Secure_Bag__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SecureBag Photo Id</label>
    <type>Checkbox</type>
</CustomField>