force-app/main/default/objects/Secure_Bag__c/fields/Scanning__c.field-meta.xml
<CustomField>
    <fullName>Scanning__c</fullName>
    <label>Scanning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>