force-app/main/default/objects/Secure_Bag__c/fields/Scanning_Status__c.field-meta.xml
<CustomField>
    <fullName>Scanning_Status__c</fullName>
    <label>Scanning Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Scanned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>