force-app/main/default/objects/Secure_Bag__c/fields/Seal_Id__c.field-meta.xml
<CustomField>
    <fullName>Seal_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Seal Id</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Secure_Packaging__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Secure Seal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Secure_Packaging__c</referenceTo>
    <relationshipLabel>Secure Bags (Seal Id)</relationshipLabel>
    <relationshipName>Secure_Bags2</relationshipName>
    <type>Lookup</type>
</CustomField>