force-app/main/default/objects/Secure_Bag__c/fields/Secure_Bag__c.field-meta.xml
<CustomField>
    <fullName>Secure_Bag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secure Bag</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Secure_Packaging__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Secure Bag</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Secure_Packaging__c</referenceTo>
    <relationshipLabel>Secure Bags</relationshipLabel>
    <relationshipName>Secure_Bags</relationshipName>
    <type>Lookup</type>
</CustomField>