force-app/main/default/objects/Secure_Bag__c/fields/Secure_Packaging_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Secure_Packaging_Identifier__c</fullName>
    <formula>Secure_Bag__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secure Packaging Identifier</label>
    <type>Text</type>
</CustomField>