force-app/main/default/objects/Secure_Bag__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Secure Bags</relationshipLabel>
    <relationshipName>SecureBags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>