force-app/main/default/objects/Secure_Bag__c/fields/Tracking__c.field-meta.xml
<CustomField>
    <fullName>Tracking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tracking</label>
    <referenceTo>Shipment_Tracking__c</referenceTo>
    <relationshipLabel>Secure Bags</relationshipLabel>
    <relationshipName>Secure_Bags</relationshipName>
    <type>Lookup</type>
</CustomField>