force-app/main/default/objects/Secure_Bag__c/fields/Trunk_Id__c.field-meta.xml
<CustomField>
    <fullName>Trunk_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trunk Id</label>
    <referenceTo>Secure_Packaging__c</referenceTo>
    <relationshipLabel>Secure Bags (Trunk Id)</relationshipLabel>
    <relationshipName>Secure_Bags1</relationshipName>
    <type>Lookup</type>
</CustomField>