force-app/main/default/objects/Secure_Bag__c/fields/Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Unique_Identifier__c</fullName>
    <formula>TEXT(Shipment__r.Destination_Hub__r.Branch__c)  + &apos; -&apos; +
		 Cargo_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Identifier</label>
    <type>Text</type>
</CustomField>