force-app/main/default/objects/Secure_Bag__c/fields/Vaults__c.field-meta.xml
<CustomField>
    <fullName>Vaults__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vault</label>
    <referenceTo>BVC_Vault_Master__c</referenceTo>
    <relationshipLabel>Secure Bags</relationshipLabel>
    <relationshipName>Secure_Bags</relationshipName>
    <type>Lookup</type>
</CustomField>