force-app/main/default/objects/Secure_Bag__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Transport__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>BVC Vehicle</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Transport__c</referenceTo>
    <relationshipLabel>Secure Bags</relationshipLabel>
    <relationshipName>Secure_Bags</relationshipName>
    <type>Lookup</type>
</CustomField>