force-app/main/default/objects/Secure_Bag__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Secure_Bag__c</columns>
    <columns>Shipment__c</columns>
    <columns>Shipping_Note_Number__c</columns>
    <columns>Current_Scan_Date_and_Time__c</columns>
    <columns>Current_Scan_Hub__c</columns>
    <columns>Destination_Hub__c</columns>
    <columns>Finalised_Linehaul_Number__c</columns>
    <columns>Seal_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Tracking__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>